@@ -177,6 +177,7 @@ Trunk (unreleased changes)
 
   BUG FIXES
   
+    HAMA-326: GroomServer should wait until a job finishes (edwardyoon)
     HAMA-324: Removing javadoc warnings and useless libraries (edwardyoon)
     HAMA-322: Make sure failed assertions on test threads are reported
                (Filipe Manana via edwardyoon)  
